@@ -942,7 +942,7 @@ sync_cache_dir_on_shutdown(void)
     if (buflen < dirlen) {
       if (buf)
         ats_memalign_free(buf);
-      buf = (char *)ats_memalign(sysconf(_SC_PAGESIZE), dirlen);
+      buf = (char *)ats_memalign(ats_pagesize(), dirlen);
       buflen = dirlen;
     }
 
@@ -1046,7 +1046,7 @@ Lrestart:
       if (buflen < dirlen) {
         if (buf)
           ats_memalign_free(buf);
-        buf = (char *)ats_memalign(sysconf(_SC_PAGESIZE), dirlen);
+        buf = (char *)ats_memalign(ats_pagesize(), dirlen);
         buflen = dirlen;
       }
       d->header->sync_serial++;
