@@ -71,7 +71,7 @@ inkcoreapi volatile int64_t fastalloc_mem_total = 0;
 #define MEMPROTECT_SIZE  0x200
 
 #ifdef MEMPROTECT
-static const int page_size = 8192;   /* sysconf (_SC_PAGESIZE); */
+static const int page_size = ats_pagesize();
 #endif
 
 ink_freelist_list *freelists = NULL;
